<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingPrefix">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/first_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/second_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <LinearLayout
                    android:id="@+id/dateLinear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/date_icon"
                        android:src="@drawable/date_calendar"
                        android:tint="@android:color/black" />

                    <TextView
                        android:id="@+id/time_stamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/period_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateLinear"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:contentDescription="@string/period_icon"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:src="@drawable/de_duration"
                        android:tint="@android:color/black" />

                    <TextView
                        android:id="@+id/period_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/status_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/period_linear"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/status_icon"
                        android:src="@drawable/star_vote"
                        android:tint="@android:color/black" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#c7d2d2d2" />

        <TextView
            fontPath="fonts/Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:text="@string/description_overview"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#c7d2d2d2" />

        <TextView
            fontPath="fonts/Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/values_detail"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/values_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:divider="@android:color/transparent"
                android:listSelector="@drawable/list_selector"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/noValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="12dp"
                android:text="@string/no_values_existed"
                android:textSize="16sp"
                android:visibility="gone" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#c7d2d2d2" />

        <TextView
            fontPath="fonts/Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingRight="12dp"
            android:paddingBottom="8dp"
            android:text="@string/state_detail"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/state_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:orientation="vertical" />


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>